  return the proper failure return value (1). Patch contributed by Jeff Knupp.

- Issue #15229: An OSError subclass whose __init__ doesn't call back
  OSError.__init__ could produce incomplete instances, leading to crashes
  when calling str() on them.

- Issue 15307: Virtual environments now use symlinks with framework builds
  on Mac OS X, like other POSIX builds.

Library
-------

- Issue #15559: To avoid a problematic failure mode when passed to the bytes
  constructor, objects in the ipaddress module no longer implement __index__
  (they still implement __int__ as appropriate)

- Issue #15546: Fix handling of pathological input data in the peek() and
  read1() methods of the BZ2File, GzipFile and LZMAFile classes.

- Issue #13052: Fix IDLE crashing when replace string in Search/Replace dialog
  ended with '\'. Patch by Roger Serwy.

- Issue #12655: Instead of requiring a custom type, os.sched_getaffinity and
  os.sched_setaffinity now use regular sets of integers to represent the CPUs
  a process is restricted to.

- Issue #15538: Fix compilation of the getnameinfo() / getaddrinfo()
  emulation code.  Patch by Philipp Hagemeister.

- Issue #15519: Properly expose WindowsRegistryFinder in importlib (and use
  the correct term for it). Original patch by Eric Snow.

- Issue #15502: Bring the importlib ABCs into line with the current state
  of the import protocols given PEP 420. Original patch by Eric Snow.

- Issue #15499: Launching a webbrowser in Unix used to sleep for a few
  seconds.  Original patch by Anton Barkovsky.

- Issue #15463: the faulthandler module truncates strings to 500 characters,
  instead of 100, to be able to display long file paths

- Issue #6056: Make multiprocessing use setblocking(True) on the
  sockets it uses.  Original patch by J Derek Wilson.

- Issue #15364: Fix sysconfig.get_config_var('srcdir') to be an
  absolute path.

- Issue #15041: update "see also" list in tkinter documentation.
