@@ -77,6 +77,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15471: Do not use mutable objects as defaults for
+  importlib.__import__().
+
 - Issue #15559: To avoid a problematic failure mode when passed to the bytes
   constructor, objects in the ipaddress module no longer implement __index__
   (they still implement __int__ as appropriate)
